Changed page title and added smooth scroll

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
   font-family: 'Source Sans 3', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .top-section-wrapper {
   background-color: #001d37;
   padding-left: 16px;
