--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,16 @@ html {
   font-family: 'Source Sans 3', sans-serif;
   font-size: 1.1rem;
   color: #9f9f9f;
+  cursor: pointer;
+}
+
+.pet-filter button:hover {
+  color: #7d7d7d;
+}
+
+.pet-filter .active, .pet-filter .active:hover {
+  color: #475AFF;
+  text-decoration: underline;
 }
 
 .site-footer {
